--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/ms-madi": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo-google-fonts/stick": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.13",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "google-fonts": "^1.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
